templates/istio-gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  annotations: {}
  generation: 1
  name: apache-gateway
  namespace: apache-tomcat
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - www.httpd.com
    port:
      name: http
      number: 80
      protocol: HTTP
